--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
+
+    @font-face {
+        font-family: myFirstFont;
+        src: url(Outfit-VariableFont_wght.ttf);
+      }
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
 
